lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:3: error: not found: value setPouseeDesiree
	setPouseeDesiree(P)
        ^Lander:5: error: not found: value setPouseeDesiree
		setPouseeDesiree(P+1)
                ^Lander:7: error: not found: value setPouseeDesiree
		setPouseeDesiree(P-1)
                ^