lander.lessons.lander.lvl1_lander_101.Lander101.scala.code
def step() {
	var P=2
	setPouseeDesiree(P)
	if (getVitesseY>10) {
		setPouseeDesiree(P+1)
	} else {
		setPouseeDesiree(P-1)
	}
}